Fix for top alignment of child panes in fullwidth dropdowns

--- a/engines/common/nucleus/scss/nucleus/_nav.scss
+++ b/engines/common/nucleus/scss/nucleus/_nav.scss
@@ -20,6 +20,9 @@
         		&.g-active {
         			top: auto;
         		}
+        		.g-dropdown.g-active {
+        			top: 0;
+        		}
         	}
         }
     }
