--- a/themes/hydrogen/common/scss/mixins/_nav.scss
+++ b/themes/hydrogen/common/scss/mixins/_nav.scss
@@ -1,6 +1,5 @@
 %dropdown-column {
 	width: $menu-col-width;
-	float: left;
 }
 
 // Main Nav Colors
